# Summit

./: .gitignore  LICENSE  Procfile  README.md  opportunities.json  render.yaml  test_impactmatch.db  volunteer_opportunities.csv
.github/: dependabot.yml
backend/: .env.example  RUNBOOK.md  alembic.ini  docker-compose.yml  impactmatch.db  main.py  pyproject.toml  requirements.txt  scraper.py  summit.db  test_summit.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0003_geocode_metadata.py  0004_add_is_scraped.py
backend/app/: config.py  dependencies.py  main.py  security.py
backend/app/api/v1/: auth.py  dashboard.py  opportunities.py  organizations.py  recommendations.py  router.py  users.py
backend/app/db/: session.py
backend/app/models/: __init__.py  auth_credential.py  opportunity.py  organization.py  user.py  volunteer_record.py
backend/app/schemas/: dashboard.py  opportunity.py  organization.py  recommendation.py  user.py
backend/app/scraper/: __init__.py  deduplicator.py  extractor.py  playwright_scraper.py  runner.py  static_scraper.py
backend/app/scripts/: backfill_geocode.py
backend/app/services/: gemini.py  geocoding.py  location.py  recommendation.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_location.py  test_opportunities.py  test_recommendations.py  test_scraper.py
data/: static_opportunities.csv  static_opportunities.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: auth-context.tsx  globals.css  globals.scss  layout.tsx  page.tsx
(+33 files in other folders)
