[project]
name = "summit-backend"
version = "0.1.0"
description = "Summit FastAPI backend"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "playwright>=1.51.0,<2.0.0",
  "sqlalchemy>=2.0.49,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.2.0,<8.0.0",
  "pgvector>=0.3.6,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
